--- a/my-app/package.json
+++ b/my-app/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Alfonso's-Portfolio",
+  "name": "Alfonso's-Portfolio!",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
