--- a/my-app/package.json
+++ b/my-app/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "https://alfonsocerv7.github.io/Alfonso-React-Portfolio/",
   "name": "Alfonso's-Portfolio!",
   "version": "0.1.0",
   "private": true,
@@ -12,6 +13,8 @@
     "web-vitals": "^1.1.2"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -b master -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
@@ -34,5 +37,10 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@testing-library/jest-dom": "^5.8.0",
+    "@testing-library/react": "^9.5.0",
+    "gh-pages": "^3.2.3"
   }
 }
