--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "homepage": "https://alfonsocerv7.github.io/Alfonso-React-Portfolio/",
-  "name": "Alfonso's-Portfolio!",
+  "name": "Alfonso-React-Portfolio",
+  "homepage": "http://alfonsocerv7.github.io/Alfonso-React-Portfolio",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -13,12 +13,12 @@
     "web-vitals": "^1.1.2"
   },
   "scripts": {
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
